[gd_scene load_steps=13 format=3 uid="uid://dkpetubbgifjt"]

[ext_resource type="Script" path="res://people/person.gd" id="1_44q7q"]
[ext_resource type="Texture2D" uid="uid://dumdtyfgq046d" path="res://people/sprites/hair_back/hair_back4.png" id="1_xi3dc"]
[ext_resource type="Texture2D" uid="uid://b4nylrepan586" path="res://people/sprites/hair_back/hair_back_color4.png" id="2_58wqr"]
[ext_resource type="Texture2D" uid="uid://bjvopt30jjire" path="res://people/sprites/base/base4.png" id="3_pvqr8"]
[ext_resource type="Texture2D" uid="uid://dp7q6ammgusc1" path="res://people/sprites/base/base_clothes4.png" id="4_32aqf"]
[ext_resource type="Texture2D" uid="uid://cqk6uhgc73vb7" path="res://people/sprites/base/base_skin4.png" id="5_cjw75"]
[ext_resource type="Texture2D" uid="uid://ccarjn1jkc8ak" path="res://people/sprites/face_normal.png" id="6_iaswg"]
[ext_resource type="Texture2D" uid="uid://d4n1vykf4t1q1" path="res://people/sprites/hair_front/hair_front4.png" id="7_eibrj"]
[ext_resource type="Texture2D" uid="uid://dkoar6vmmia8b" path="res://people/sprites/hair_front/hair_front_color4.png" id="8_eeign"]

[sub_resource type="Animation" id="Animation_f8qy4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Parts:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_jtmvy"]
resource_name = "bounce"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Parts:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 10), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_35cah"]
_data = {
"RESET": SubResource("Animation_f8qy4"),
"bounce": SubResource("Animation_jtmvy")
}

[node name="Person" type="Node2D"]
script = ExtResource("1_44q7q")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_35cah")
}

[node name="Parts" type="Node2D" parent="."]

[node name="HairBack" type="Sprite2D" parent="Parts"]
texture = ExtResource("1_xi3dc")

[node name="HairBackColor" type="Sprite2D" parent="Parts"]
texture = ExtResource("2_58wqr")

[node name="Base" type="Sprite2D" parent="Parts"]
texture = ExtResource("3_pvqr8")

[node name="BaseClothes" type="Sprite2D" parent="Parts"]
texture = ExtResource("4_32aqf")

[node name="BaseSkin" type="Sprite2D" parent="Parts"]
texture = ExtResource("5_cjw75")

[node name="Face" type="Sprite2D" parent="Parts"]
texture = ExtResource("6_iaswg")

[node name="HairFront" type="Sprite2D" parent="Parts"]
texture = ExtResource("7_eibrj")

[node name="HairFrontColor" type="Sprite2D" parent="Parts"]
texture = ExtResource("8_eeign")
